styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-family: 'Montserrat', sans-serif;
    color: #444;
    background-color: #000;
    line-height: 1.4;
    margin: 0;
}

a {
    text-decoration: none;
    color: inherit !important;
}

.email-input-subscribe {
    max-width: 400px;
    margin: 0 auto;
    box-shadow: 0 7px 21px 0 #0004;
    border-radius: 6px;
    overflow: hidden;
}

.custom-bullet {
    display: grid;
    gap: 6px;

    li {
        display: inline-flex;
        gap: 6px;
        font-size: 1rem;

        .dot {
            font-size: 2rem;
            line-height: 1rem;
        }
    }
}

.back-light {
    background-color: #f9f8f4;
    color: #444;

    a {
        color: inherit;
        transition: all 0.2s ease;
    }

    a:hover {
        box-shadow: inset 0 -2px 0 0 #4442;
        &.btn {
            box-shadow: inset 0 -2px 0 0 #4442, 0 7px 22px 0 #0005;
        }
        transform: translateY(-5px);
    }
}

.back-blue {
    background-color: #2b5384;
    color: #f9f8f4;

    a {
        color: inherit;
        transition: all 0.2s ease;
    }

    a:hover {
        box-shadow: inset 0 -2px 0 0 #4442;
        &.btn {
            box-shadow: inset 0 -2px 0 0 #4442, 0 7px 22px 0 #0005;
        }
        transform: translateY(-5px);
    }
}

.back-dark {
    background-color: #111;
    color: #fff;

    a {
        color: inherit;
        transition: all 0.2s ease;
    }

    a:hover {
        box-shadow: inset 0 -2px 0 0 #fffa;
        &.btn {
            box-shadow: inset 0 -2px 0 0 #fffa, 0 7px 22px 0 #fff5;
        }
        transform: translateY(-5px);
    }
}

.navb {
    padding: 2.5rem 3.5rem;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;

    .navb-name {
        text-transform: uppercase;
        font-weight: 700;
        letter-spacing: 1px;
    }

    .navb-links {
        justify-self: center;
        display: flex;
        gap: 2rem;
    }

    .navb-link {
        padding: 0.5rem;
        font-weight: 700;
    }
}

.jumbo {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 3.5rem;
    padding: 0 3.5rem 3rem 3.5rem;

    .jumbo-text {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        width: 350px;

        .jumbo-title {
            font-size: 2rem;
            font-weight: 700;
            text-transform: uppercase;
            letter-spacing: 2px;
            font-style: italic;
        }

        .jumbo-description {
            color: #000;
            font-size: 1.2rem;
        }

        .jumbo-cta {
            margin-top: 1rem;
        }
    }

    .jumbo-image {
        max-height: 500px;
    }

    .buy-links {
        display: flex;
        justify-content: center;
        gap: 1rem;
        margin-top: 1rem;

        a.btn {
            display: inline-flex;
            align-items: center;
            background: #fff;

            .btn-img-payhip {
                height: 25px;
            }

            .btn-img-gumroad {
                height: 10px;
            }
        }
    }
}

.cta-email {
    padding: 0 2rem 3.5rem 2rem;
    font-size: 1.3rem;
}

.about-me {
    padding: 3.5rem 2rem;

    .about-me-split {
        display: flex;
        gap: 3.5rem;
        align-items: center;
        max-width: 800px;
        margin: 0 auto;

        img {
            max-height: 250px;
            border-radius: 8px;
        }
    }
}

.footer {
    padding: 2rem 3.5rem;

    .footer-copy {
        text-align: center;
        font-size: 0.9rem;
        margin-bottom: 1rem;
        text-transform: uppercase;
    }

    .footer-links {
        display: flex;
        justify-content: center;
        gap: 1rem;
        font-size: 0.9rem;
    }
}

@media (max-width: 768px) {
    .hidden-mobile {
        display: none;
    }

    .navb {
        grid-template-columns: 1fr;
        justify-items: center;
    }

    .jumbo {
        flex-direction: column-reverse;

        .jumbo-text {
            width: 300px;
        }

        .buy-links {
            flex-direction: column;
            align-items: center;

            a.btn {
                justify-content: center;
                min-height: 60px;
                width: 200px;
                padding: 12px 6px;

                .btn-img-payhip {
                    height: 30px;
                }

                .btn-img-gumroad {
                    height: 15px;
                }
            }
        }
    }

    .about-me-split {
        flex-direction: column;
    }

    .footer-links {
        flex-direction: column;
        text-align: center;
    }
}

/* start Brevo form styles */
#sib-form-container {
    display: grid !important;
    justify-items: center !important;
}
#sib-container {
    background: #0000 !important;
}
.sib-form {
    padding: 0 !important;
}
.sib-form .entry__field {
    margin: 0 !important;
}
.sib-form-message-panel {
    margin: 0 !important;
}
/* end Brevo form styles */

